# IVY-League-Collage-Predictor

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
models/: LR_model.joblib
notebooks/: EDA.ipynb  build_features.py  streamlit_app.py
notebooks/cache/joblib/sklearn/pipeline/_fit_transform_one/3be0d8e2386704977dda9c5e3a36d41f/: metadata.json
notebooks/cache/joblib/sklearn/pipeline/_fit_transform_one/ca4c2fe8eec9e3553b838e877aee5649/: output.pkl
src/: build_features.py  train.py
