[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jamboree_admission_linear_regression"
version = "0.0.1"
description = "Linear Regresssion model to predict the chance of admission to IVY league college"
authors = [
  { name = "Athul Jyothis" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["jamboree_admission_linear_regression"]
force_sort_within_sections = true
